<resources>
    <string name="app_name">Quiz App</string>
    <string name="welcomeTag">Welcome to Car Quiz app</string>
    <string name="question_1">1.What is the measuring unit of engine capacity ?</string>
    <string name="question_1_answer_A">Cubic Centimeters (CC)</string>
    <string name="question_1_answer_B">Liter (L)</string>
    <string name="question_1_answer_C">Centimeteres (cm)</string>
    <string name="question_2">2.What is the measuring unit of engine power ?</string>
    <string name="question_2_answer_A">Horse power (hp)</string>
    <string name="question_2_answer_B">Killo Watt (KW)</string>
    <string name="question_2_answer_C">Newton Meters (NM)</string>
    <string name="question_3">3.which engine has more horse power for the same engine capacity ?</string>
    <string name="question_3_answer_A">Petrol engine</string>
    <string name="question_3_answer_B">Diesel engine</string>
    <string name="question_4">4.which engine has more tourge for the same engine capacity?</string>
    <string name="question_4_answer_A">Petrol engine</string>
    <string name="question_4_answer_B">Diesel engine</string>
    <string name="question_5">5.whiche engine has more milage per galon ?</string>
    <string name="question_5_answer_A">Petrol engine</string>
    <string name="question_5_answer_B">Diesel engine</string>
    <string name="question_6">6.what is the red line RPM for most cars ?</string>
    <string name="question_6_answer_A">6000 RPM</string>
    <string name="question_6_answer_B">5000 RPM</string>
    <string name="question_6_answer_C">3000 RPM</string>
    <string name="question_7">7.what is the stoichiometric air fuel ratio ?</string>
    <string name="question_7_answer_A">15</string>
    <string name="question_7_answer_B">14.7</string>
    <string name="question_7_answer_C">18</string>
    <string name="submit_button">Submit</string>
</resources>
