<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@drawable/supercar"
    tools:context="com.example.android.quizapp.MainActivity"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeTag"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="#F44336"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
                                             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:textAppearance="@style/QStyle"
            android:layout_marginBottom="10dp"/>

        <CheckBox
            android:id="@+id/Q1_CC_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1_answer_A"
            android:textColor="#FBC02D"
            android:textSize="12sp"
            android:buttonTint="#FBC02D"/>

        <CheckBox
            android:id="@+id/Q1_L_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1_answer_B"
            android:textColor="#FBC02D"
            android:textSize="12sp"
            android:buttonTint="#FBC02D"/>
        />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1_answer_C"
            android:textColor="#FBC02D"
            android:textSize="12sp"
            android:buttonTint="#FBC02D"/>
        />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2"
            android:textAppearance="@style/QStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <CheckBox
            android:id="@+id/Q2_hp_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2_answer_A"
            android:textColor="#FBC02D"
            android:textSize="12sp"
            android:buttonTint="#FBC02D"/>
        />

        <CheckBox
            android:id="@+id/Q2_kw_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2_answer_B"
            android:textColor="#FBC02D"
            android:textSize="12sp"
             android:buttonTint="#FBC02D"/>
        />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2_answer_C"
            android:textColor="#FBC02D"
            android:textSize="12sp"
            android:buttonTint="#FBC02D"/>
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            android:textAppearance="@style/QStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/Q3_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_answer_A"
                android:textColor="#FBC02D"
                android:textSize="12sp"
                android:buttonTint="#FBC02D"
               />


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_answer_B"
                android:textColor="#FBC02D"
                android:textSize="12sp"
                android:buttonTint="#FBC02D"/>


        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4"
            android:textAppearance="@style/QStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4_answer_A"
                android:textColor="#FBC02D"
                android:textSize="12sp"
                android:buttonTint="#FBC02D"/>
            />

            <RadioButton
                android:id="@+id/Q4_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4_answer_B"
                android:textColor="#FBC02D"
                android:textSize="12sp"
                android:buttonTint="#FBC02D"/>



        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5"
            android:textAppearance="@style/QStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_answer_A"
                android:textColor="#FBC02D"
                android:textSize="12sp"
                android:buttonTint="#FBC02D"/>
            />

            <RadioButton
                android:id="@+id/Q5_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_answer_B"
                android:textColor="#FBC02D"
                android:textSize="12sp"
                android:buttonTint="#FBC02D"/>
            />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_6"
            android:textAppearance="@style/QStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/Q6_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6_answer_A"
                android:textColor="#FBC02D"
                android:textSize="12sp"
                android:buttonTint="#FBC02D"/>
            />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6_answer_B"
                android:textColor="#FBC02D"
                android:textSize="12sp"
                android:buttonTint="#FBC02D"/>
            />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6_answer_C"
                android:textColor="#FBC02D"
                android:textSize="12sp"
                android:buttonTint="#FBC02D"/>
            />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_7"
            android:textAppearance="@style/QStyle"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_7_answer_A"
                android:textColor="#FBC02D"
                android:textSize="12sp"
                android:buttonTint="#FBC02D"/>
            />

            <RadioButton
                android:id="@+id/Q7_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_7_answer_B"
                android:textColor="#FBC02D"
                android:textSize="12sp"
                android:buttonTint="#FBC02D"/>
            />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_7_answer_C"
                android:textColor="#FBC02D"
                android:textSize="12sp"
                android:buttonTint="#FBC02D"/>
            />

        </RadioGroup>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:onClick="submitAnswers"
            />


    </LinearLayout>


</ScrollView>
